# aegislab

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
aegislab/: __init__.py  config.py
aegislab/api/: main.py
aegislab/core/: agent.py  identity.py  orchestrator.py  sandbox.py
aegislab/defenses/: __init__.py  backpressure.py  guardrails.py  injection.py  threat_detector.py
aegislab/logging/: schema.py  tracer.py
aegislab/policy/: engine.py  loader.py  models.py
aegislab/proxy/: egress.py
dashboard/: index.html
demo/: scenario.py
policies/agents/: data-analyst.yaml  report-generator.yaml
policies/tools/: database.yaml  filesystem.yaml  http.yaml  shell.yaml
tests/: conftest.py  test_api.py  test_ata_and_guardrails.py  test_backpressure.py  test_identity.py  test_injection.py  test_policy.py
